--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="blockNavbar__logo" src="images/logo.svg" alt="page logo" >
   </nav>
     <div class="blockHero">
-      <img class="blockHero__image"src="images/hero-mobile.jpg" alt="Hero image for mobile">
+     <img class="blockHero__image"src="hero-desktop.jpg"hero-desktop.jpg"" alt="Hero image for mobile">
     </div>
   <div class="blockGeneral">
     <div class="blockText">
